--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -5,6 +5,18 @@
         <img src="/test/images/nicokosi.jpg" width="90" height="90" alt="{{ .Site.Title }}" title="{{ .Site.Title }}"/>
         <a class="nav-item" href="{{ .Site.BaseURL }}"><h1 class="title is-4">{{ .Site.Title }}</h1></a>
       </div>
+      <div>
+        {{ if .IsTranslated }}
+            {{ range .Translations }}
+              {{ if eq .Lang "fr" }}
+<a href="{{ .Permalink }}">🇫🇷 version française</a>
+              {{ end }}
+              {{ if eq .Lang "en" }}
+              <a href="{{ .Permalink }}">🇬🇧 english version</a>
+              {{ end }}
+            {{ end}}
+        {{ end }}
+      </div>
       <div class="nav-right">
         <nav class="nav-item level is-mobile">
           {{ range .Site.Params.social }}
