--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -2,7 +2,7 @@
   <div class="container">
     <nav class="nav">
       <div class="nav-left">
-        <img src="/test/images/nicokosi.jpg" width="90" height="90" alt="{{ .Site.Title }}" title="{{ .Site.Title }}"/>
+        <img src="{{ .Site.Params.logo.url }}" width="90" height="90" alt="{{ .Site.Title }}" title="{{ .Site.Title }}"/>
         <a class="nav-item" href="{{ .Site.BaseURL }}"><h1 class="title is-4">{{ .Site.Title }}</h1></a>
       </div>
       <div>
